tdf#168008 XTextRangeCompare doesn't throw when ranges are in different texts

regression from
    commit 27e9fd67260b8ad321cf0f8722e2db8a08473927
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Jun 13 09:01:50 2024 +0200
    tdf#144208 speedup doc with lots of redline (7)

Change-Id: I2df6a7c345735be84b459bab0bbfd874c991f6f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190092
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 14e542d58778963df461965f129286fc75459d3b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190096
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>